# CoalStab-

./: README.md  TZ  emulator.cpp  test.py  weather.cpp  Реализация V 1.0  Составляющая приложения  архитектура  важно  новый план  определение и рекомендации по написанию архитектуры приложения  создание ПО  типы идей  шаблон архитектуры приложения
CoalStab/: CoalStab_Data.db  CoalStab_Data.txt  CoalStab_Sensors.db  main.cpp  main.py  text.txt
Cstab/: CoalStab_Data.db  CoalStab_Data.txt  Stability.cpp  coalstab  my_program
coalstab/: dynamicstabilty  dynamicstabilty.cpp  emulator  emulator.cpp  mainheader.h  safetyfactor  safetyfactor.cpp  slopeangle  slopeangle.cpp  slopesafety  slopesafety.cpp  slopesafety.h  stability  stability.cpp  staticstability  staticstability.cpp  staticstability.h  tensiondumps  tensiondumps.cpp
doc/: Problems
idk/: CMakeLists.txt  CoalStab_Data.db  CoalStab_Data.txt  CoalStab_Sensors.db  DynamicStability.cpp  SlopeSafety.cpp  Slopeangle.cpp  Stability  Stability.cpp  StaticStability.cpp  Tensiondumps.cpp  inter.py  libdlyb.dylib  libsafetyfactor.dylib  libslopeangle.dylib  libslopesafety.dylib  libstability.dylib  libstaticstability.dylib  libtension.dylib  main  main.cpp  my_program  safetyfactor.cpp  test.py  финальный код.txt
idk/cpp/: DynamicStability.cpp  Tensiondumps.cpp  main.cpp
idk/dynamic lib/: libslopesafety.dylib  libstability.dylib
idk/output info/: CoalStab_Data.db
сайтик/: aboutus.html  index.html  usersinfo.html  usinginfo.html
сайтик/css/: aboutus.css  style.css
сайтик/js/: script.js
